# Lavendel

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Lumen.sln  README.md  README_DEMOWIDGET_SOLUTION.md  VISUAL_OVERVIEW.md
.github/workflows/: cmake-multi-platform.yml  setup.yml
Lavendel/: CMakeLists.txt
Lavendel-Editor/: CMakeLists.txt
Lavendel-Editor/src/: EditorApp.cpp
Lavendel-Editor/src/EditorLayer/: EditorLayer.cpp  EditorLayer.h
Lavendel/src/: Lavendel.h  lvpch.h
Lavendel/src/Lavendel/: Application.h  Entrypoint.h  Log.h
Lavendel/src/Lavendel/Core/: Application.cpp  Core.h  Entrypoint.h
Lavendel/src/Lavendel/Events/: Event.h
Lavendel/src/Lavendel/ImGui/: ImGuiLayer.cpp  ImGuiRenderer.cpp  ImGuiRenderer.h
Lavendel/src/Lavendel/Renderer/: Framebuffer.cpp  Framebuffer.h  Pipeline.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
LavendelEditor/: CMakeLists.txt
LavendelEditor/src/: Editor.cpp  EditorLayer.h
Lumen/: Lumen.vcxproj  Lumen.vcxproj.filters
Lumen/src/: Lumen.h
Lumen/src/Lumen/: Application.cpp  Application.h  Core.h  Entrypoint.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  Sandbox.vcxproj.filters
Sandbox/src/: Solution.cpp
Scripts/: CheckPython.py  Setup.bat  Setup.py  Setup.sh  Utils.py  Vulkan.py  compile_shaders.bat  compile_shaders.sh
Velt/: CMakeLists.txt
Velt/src/Velt/: Application.cpp
Velt/src/Velt/Core/: Application.cpp  Application.h  Assert.h  Entrypoint.h  Log.cpp  Log.h  Window.h
Velt/src/Velt/ImGui/: ImGuiRenderer.cpp
VeltEditor/src/: EditorLayer.h
shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
(+56 files in other folders)
